[gd_scene load_steps=2 format=3 uid="uid://ipqn6c3kseo2"]

[ext_resource type="Script" path="res://scr/spaceBackgroundGenerator.gd" id="1_ptuvr"]

[node name="spaceBackgroundGenerator" type="Node2D"]
script = ExtResource("1_ptuvr")

[node name="spaceParallaxEffectManager" type="ParallaxBackground" parent="."]
layer = -1

[node name="spaceBGTParallax" type="ParallaxLayer" parent="spaceParallaxEffectManager"]
motion_scale = Vector2(0.1, 0.1)

[node name="spaceBackgroundTexture" type="Sprite2D" parent="spaceParallaxEffectManager/spaceBGTParallax"]
modulate = Color(0.1, 0, 0.1, 1)

[node name="spaceGTParallax" type="ParallaxLayer" parent="spaceParallaxEffectManager"]
motion_scale = Vector2(0.2, 0.2)

[node name="spaceGasesTexture" type="Sprite2D" parent="spaceParallaxEffectManager/spaceGTParallax"]
modulate = Color(0.384314, 0, 0.352941, 1)

[node name="spaceGT1Parallax" type="ParallaxLayer" parent="spaceParallaxEffectManager"]
motion_scale = Vector2(0.4, 0.4)

[node name="spaceGasesTexture1" type="Sprite2D" parent="spaceParallaxEffectManager/spaceGT1Parallax"]
modulate = Color(0.211765, 0.109804, 0.478431, 0.47451)

[node name="spaceGT2Parallax" type="ParallaxLayer" parent="spaceParallaxEffectManager"]
motion_scale = Vector2(0.6, 0.6)

[node name="spaceGasesTexture2" type="Sprite2D" parent="spaceParallaxEffectManager/spaceGT2Parallax"]
modulate = Color(0.639216, 1, 1, 0.47451)

[node name="spaceSTParallax" type="ParallaxLayer" parent="spaceParallaxEffectManager"]
motion_scale = Vector2(0.9, 0.9)

[node name="spaceStarParticles" type="CPUParticles2D" parent="spaceParallaxEffectManager/spaceSTParallax"]
emitting = false
amount = 250
lifetime = 600.0
fixed_fps = 1
emission_shape = 3
emission_rect_extents = Vector2(4096, 4096)
gravity = Vector2(0, 0)

[node name="spaceStarTexture" type="Sprite2D" parent="spaceParallaxEffectManager/spaceSTParallax"]

[node name="spaceST1Parallax" type="ParallaxLayer" parent="spaceParallaxEffectManager"]
motion_scale = Vector2(0.15, 0.15)

[node name="spaceStarTexture1" type="Sprite2D" parent="spaceParallaxEffectManager/spaceST1Parallax"]
